--- a/index.html
+++ b/index.html
@@ -77,7 +77,36 @@
                 <p>คำอธิบายผลงานตัวอย่าง สามารถใส่รายละเอียดเพิ่มเติมได้</p>
             </div>
         </div>
-
+         <!-- ผลงานที่ 4 -->
+        <div class="row mb-5 align-items-center">
+            <div class="col-md-6">
+                <img src="https://thonglorpet.com/_content_images/petdiary/S0386.jpg?vs=20250723155134" class="img-fluid">
+            </div>
+            <div class="col-md-6">
+                <h3>ผลงานที่ 4 </h3>
+                <p>คำอธิบายผลงานตัวอย่าง สามารถใส่รายละเอียดเพิ่มเติมได้</p>
+            </div>
+        </div>
+         <!-- ผลงานที่ 5 -->
+        <div class="row mb-5 align-items-center">
+            <div class="col-md-6">
+                <img src="https://inwfile.com/s-j/f5oy1w.jpg" class="img-fluid">
+            </div>
+            <div class="col-md-6">
+                <h3>ผลงานที่ 5 </h3>
+                <p>คำอธิบายผลงานตัวอย่าง สามารถใส่รายละเอียดเพิ่มเติมได้</p>
+            </div>
+        </div>
+          <!-- ผลงานที่ 6 -->
+        <div class="row mb-5 align-items-center">
+            <div class="col-md-6">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQZKP5SumGaqdfQhTNckfgEvyQRMkrF7xXWVQ&s" class="img-fluid">
+            </div>
+            <div class="col-md-6">
+                <h3>ผลงานที่ 6 </h3>
+                <p>คำอธิบายผลงานตัวอย่าง สามารถใส่รายละเอียดเพิ่มเติมได้</p>
+            </div>
+        </div>
     </section>
 </div>
 
